--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,8 @@
 	<description>Film Checker</description>
 	<properties>
 		<java.version>11</java.version>
+		<maven.compiler.target>11</maven.compiler.target>
+		<maven.compiler.source>11</maven.compiler.source>
 		<kotlin.version>1.6.0</kotlin.version>
 	</properties>
 	<dependencies>
